[gd_scene load_steps=9 format=3 uid="uid://yaome8jdqjrq"]

[ext_resource type="Script" path="res://objects/vase_3.gd" id="1_e07gf"]
[ext_resource type="Texture2D" uid="uid://cnoq01ditmd17" path="res://objects/vase3.png" id="1_j74c1"]
[ext_resource type="AudioStream" uid="uid://bb88eb87iu57y" path="res://objects/explosion.wav" id="2_fmt7o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xl3ge"]
atlas = ExtResource("1_j74c1")
region = Rect2(10, 45, 10, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_plke1"]
atlas = ExtResource("1_j74c1")
region = Rect2(10, 11, 10, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_gwjrm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl3ge")
}],
"loop": true,
"name": &"broken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_plke1")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5k1q"]
size = Vector2(4, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4t6l8"]
size = Vector2(6, 3)

[node name="Vase3" type="CharacterBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_e07gf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gwjrm")
animation = &"normal"

[node name="NormalCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, -3.5)
shape = SubResource("RectangleShape2D_j5k1q")

[node name="BrokenCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, -4.5)
shape = SubResource("RectangleShape2D_4t6l8")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fmt7o")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
